# unmarkd

./: .gitignore  CHANGELOG.md  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/workflows/: ci.yml  release.yml
assets/: benchmark.html
tests/: test_edgecases.py  test_nested.py  test_roundtrip.py  test_single_tags.py  test_unmarkd.py  test_version.py
unmarkd/: __init__.py  unmarkers.py
