[tool.poetry]
name = "unmarkd"
version = "0.1.6"
license = "GPL-3.0-or-later"
description = "A markdown reverser."
authors = ["Bryan Hu <bryan.hu.2020@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ThatXliner/unmarkd/tree/master"
documentation = "https://github.com/ThatXliner/unmarkd/tree/master#documentation"
classifiers = ["Development Status :: 5 - Production/Stable", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: Implementation :: CPython", "Typing :: Typed", "Topic :: Text Processing :: Markup :: Markdown", "Topic :: Text Processing :: Markup :: HTML", "Topic :: Software Development :: Libraries :: Python Modules"]
include = ["LICENSE.md", "README.md"]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9.0"
cchardet = {version = "^2.1.7", optional = true}

[tool.poetry.extras]
speedups = ["cchardet"]
all = ["cchardet"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
pylint = "^2.6.2"
toml = "^0.10.2"
pytest-cov = "^2.11.1"
hypothesis = {extras = ["cli"], version = "^6.3.1"}
black = {version = "^20.8b1", allow-prereleases = true}
markdown-it-py = "^0.6.2"
pdbpp = "^0.10.2"
marko = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
