[tool.poetry]
name = "unmarkd"
description = "A markdown reverser"
authors = ["Bryan Hu <bryan.hu.2020@gmail.com>"]
version = "1.1.3"

readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    # Get the list of trove classifiers here: https://pypi.org/classifiers/
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
documentation = "https://unmarkd.readthedocs.io/en/latest/index.html"
homepage = "https://github.com/ThatXliner/unmarkd"
# keywords = ["awesome", "project"]  # Maximum of 5 keywords

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = ">=4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
hypothesis = "^6.68.2"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.0.0"
ruff = "^0.0.249"
shed = "^0.10.9"

Sphinx = "^6.1.3"
toml = "^0.10.2"
types-beautifulsoup4 = "^4.12.0.5"
marko = "^1.3.0"

[tool.poe.tasks]
# Code linting
mypy   = {cmd = "mypy unmarkd --strict", help = "Run MyPy on codebase"}
ruff = {cmd = "ruff check unmarkd", help = "Run Ruff on codebase"}
check_black = {cmd = "black unmarkd --check"}
check_imports = {cmd = "ruff check unmarkd --select I"}
style    = ["check_black", "check_imports"]
codebase = ["ruff", "mypy"]
    [tool.poe.tasks.docs]
    cmd = "sphinx-build docs build"
    help = "Build documentation"

    [tool.poe.tasks.format]
    cmd = "shed"
    help = "Format code"

    [tool.poe.tasks.fix-ruff]
    cmd = "ruff unmarkd --fix"
    help = "Ruff autofix"

    [tool.poe.tasks.lint]
    sequence = ["style", "codebase"]
    help = "Lint codebase"

    [tool.poe.tasks.test]
    cmd = "pytest -vvv --cov=unmarkd"
    help = "Simply run test suite"

    [tool.poe.tasks.ci]
    cmd = "pytest -vvv --cov=unmarkd --cov-report=xml"
    help = "This workflow is for Github Actions"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 88
select = ["ALL"]
ignore = [
    # "D",    # "No docs"
    "T20",  # "Don't use print or pprint"
    # "ANN",  # Type annotation errors (or the lack of it)
    "FBT",  # I actually don't know why this exists
            # and it seems useless so ignore it
    # Fix doc rule conflicts
    "D203",
    "D213"
]
target-version = "py38"
[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN101", "D"]
"tests/test_roundtrip.py" = ["E501", "ANN001"]
"docs/conf.py" = ["INP001", "A001"]
"unmarkd/unmarkers.py" = ["D102", "S101"]
